# Lightweight-Context-Cluster

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: coc_cifar_baseline.yaml  hbcc_accuracy_medium.yaml  hbcc_accuracy_small.yaml  hbcc_current_reference.yaml  hbcc_latency_small.yaml  hbcc_latency_tiny.yaml  smoke.yaml
docs/: accuracy_improvement_plan.md  implementation_status.md  lightweight_hbcc_research_plan.md  prune_accuracy_small.md
lightweight_hbcc/: __init__.py  config.py  data.py  engine.py  losses.py  metrics.py  profiler.py  pruning.py  reporting.py
notebooks/: cifar100_training_pipeline.ipynb  cifar10_training_pipeline.ipynb  context-cluster-cifar10.ipynb  context-cluster-cifar100.ipynb  full_training_pipeline.ipynb  hbcc-cifar-10.ipynb  hbcc-cifar-100.ipynb  imagenet_baseline_pipeline.ipynb  stl10_training_pipeline.ipynb
results/: cifar100_combined_training_benchmark.csv  cifar100_pareto.md  cifar100_pareto_frontier.csv  cifar100_published_results.csv  cifar100_summary.csv  cifar10_published_results.csv  combined_training_benchmark.csv  pareto_frontier.csv
scripts/: prepare_kaggle_imagenet.py  prune_accuracy_small.ps1  run_accuracy_experiments.ps1  run_baseline_benchmarks.ps1  run_cifar100_experiments.ps1  run_smoke.ps1  run_stl10_experiments.ps1  train_coc_baseline.ps1  train_imagenet_baselines.ps1  train_official_coc_imagenet.ps1  train_stl10_baselines.ps1
tests/: test_config_and_pruning.py  test_data.py  test_models.py
tools/: ablation_matrix.py  benchmark.py  cifar100_report.py  export_pruned.py  train.py  (+7 more)
(+91 files in other folders)
