[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-hbcc"
version = "0.1.0"
description = "Lightweight HBCC/Context-Cluster research pipeline for CIFAR experiments."
requires-python = ">=3.10"
dependencies = [
    "einops",
    "fvcore",
    "matplotlib",
    "pandas",
    "pypdf",
    "pyyaml",
    "rich",
    "tabulate",
    "tensorboard",
    "thop",
    "timm",
    "torch",
    "torchvision",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lightweight_hbcc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
